# FT_Transformer

./: CMakeLists.txt  README.md  build.sh  profile.sh
src/: flash_attn_v2.cu  main.cu
src/baseline_test/: operation_level_protection.ipynb
src/common/: common.h  cuda_timer.h  logging.h  tensor.h  tester.h  util.h
src/flash_attn_v2/: flash_fwd_hdim128_fp16_sm80.cu  flash_fwd_hdim160_fp16_sm80.cu  flash_fwd_hdim192_fp16_sm80.cu  flash_fwd_hdim224_fp16_sm80.cu  flash_fwd_hdim256_fp16_sm80.cu  flash_fwd_hdim32_fp16_sm80.cu  flash_fwd_hdim64_fp16_sm80.cu  flash_fwd_hdim96_fp16_sm80.cu
src/flash_attn_v2/ABFT/: static_switch.h
src/flash_attn_v2/Basic/: flash_fwd_launch_template.h
src/flash_attn_v2/Optimized/: flash.h
src/flash_attn_v2/SNVR/: flash_fwd_kernel.h  softmax.h  utils.h
transformer_profile/: bert_base.py  bert_large.py  gpt2.py  t5_small.py  transformer_profile.py
